--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "cliff-roesnberg",
   "license": "ISC",
   "dependencies": {
     "@rimiti/express-async": "^1.2.0",
     "express": "^4.16.4",
     "uuid": "^8.3.2"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
